# easycheck

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: check.yml  python-package.yml
checkit/: __init__.py  checkit.py
docs/: README.rst  catch_exceptions_doctest.rst  compare_floats_doctest.rst  general_description_doctest.rst  switch_off_easycheck_doctest.rst  use_assertion.rst  use_for_self_defined_functions_doctest.rst  use_in_code_doctest.rst  use_in_testing_doctest.rst  use_with_try_doctest.rst  use_with_warnings_doctest.rst
easycheck/: __init__.py  easycheck.py
src/: __init__.py  assert_functions.py  checkit.py  comparisons.py
src/check_it/: checks.py  comparisons.py
src/checkit/: __init__.py  checks.py  comparisons.py  testing.py
tests/: module_foo.py  test_checkit.py  test_checks.py  test_comparisons.py  test_easycheck.py  test_testing.py  test_traceback.py  traceback_doctesting.py
tests/doctests/: README.rst  catch_exceptions_doctest.rst  checks_using_self_defined_functions_doctest.rst  easy_mock.txt  example_1_doctest.rst  example_2_doctest.rst  example_3_doctest.rst  example_4_doctest.rst  general_description_doctest.rst  use_checkit_with_warnings_doctest.rst  use_for_self_defined_functions_doctest.rst  use_in_code_doctest.rst  use_in_testing_doctest.rst
