[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "easycheck"
version = "0.12.1"
authors = [
        { name = "Nyggus", email = "nyggus@gmail.com" },
        { name = "KeBoan"},
        { name = "Darsoo"},
        { name = "Karollayna"},
]
description = "A tool for checking conditions in Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/nyggus/easycheck/"

[tool.setuptools]
packages = ["easycheck"]

[project.optional-dependencies]
dev = ["wheel", "black", "pytest", "mypy", "setuptools", "build"]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests", "easycheck", "docs"]
addopts = '--doctest-modules --doctest-glob="*.rst"'
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL"
]
